fixes mobile nav dropdown from overlapping items

--- a/docs/_sass/_buttons.scss
+++ b/docs/_sass/_buttons.scss
@@ -11,7 +11,7 @@
 	margin: 3rem;
 	font-size: 1.6rem;
 	padding: 1rem 3rem 1rem 3rem;
-	border-radius: .4rem;
+	border-radius: $border-radius;
 	display: inline-block;
 	letter-spacing: .05rem;
 	transition: .2s ease-out;
