--- a/docs/_sass/_variables.scss
+++ b/docs/_sass/_variables.scss
@@ -5,7 +5,7 @@
 $sless-dark-blue: #08141C;
 $sless-blue: #4D8FCC;
 $sless-light-blue: #EDF2F6;
-$border-radius: .4rem;
+$border-radius: 3px;
 $sless-text: #08141C;
 $sless-font-primary: 'Open Sans', sans-serif;
 $sless-font-secondary: 'Merriweather Sans', sans-serif;
